methods.slug.SlugHunting.scala.error
Compilation error:
SlugHunting:10: error: ';' expected but 'else' found.
    else {
    ^SlugHunting:18: error: expected class or object definition
def isFacingTrail():Boolean = {
^SlugHunting:35: error: Unmatched closing brace '}' ignored here
}
^